deployment/nrp-mcp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bw-dep
  namespace: gsoc
  labels:
    k8s-app: bw
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: bw
  template:
    metadata:
      labels:
        k8s-app: bw
    spec:
      serviceAccountName: ss-sa
      containers:
        - name: bw
          image: ubuntu
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
            - containerPort: 8024
          resources:
            limits:
              memory: 8Gi
              cpu: 2
            requests:
              memory: 4Gi
              cpu: 1
          volumeMounts:
            - name: bw-vol
              mountPath: /data
          command: ["bash", "-c"]
          args:
            - |
              [...]
      volumes:
        - name: bw-vol
          persistentVolumeClaim:
            claimName: bw-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: bw-svc
  namespace: gsoc
  labels:
    k8s-app: bw-svc
spec:
  selector:
    k8s-app: bw
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: fastmcp
      port: 8024
      protocol: TCP
      targetPort: 8024
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bw-ingress
  namespace: gsoc
spec:
  ingressClassName: haproxy
  rules:
    - host: bw.nrp-nautilus.io
      http:
        paths:
          - backend:
              service:
                name: bw-svc
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - bw.nrp-nautilus.io
